# devlog

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  SPECIFICATION.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-cloud-run.yml  docker-publish.yml
clients/ios/: README.md  run.sh
clients/linux-server/: README.md  devlog.service  install.sh
clients/linux-tray/: README.md  devlog-tray.py  install.sh
clients/mac-tray/: Info.plist  Package.swift  build.sh
clients/mac-tray/Sources/DevlogTray/: APIClient.swift  App.swift  AppState.swift  CaptureWindow.swift  Models.swift  NewProjectWindow.swift
deploy/cloud-run/: Dockerfile  README.md  entrypoint.sh  litestream.yml
deploy/cloudflare/: README.md  docker-compose.yml
deploy/pythonanywhere/: README.md  wsgi.py
deploy/vps-caddy/: Caddyfile  README.md  docker-compose.yml
scripts/: backup-db.sh  install-drawio.sh  smoke_test.py
src/devlog/: __init__.py  __main__.py  app.py  auth.py  autostop.py  config.py  db.py  link_fetcher.py  mcp_server.py  models.py  refs.py  stats.py  store.py
src/devlog/api/: attachments.py  items.py  projects.py  search.py  sessions.py  settings.py  stats.py
src/devlog/web/: app.js  index.html  manifest.json  style.css  sw.js
